k8s/infra/network/dns/adguard/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: adguard
  namespace: dns
spec:
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: adguard
          image: docker.io/adguard/adguardhome:v0.107.78@sha256:1ea34eafe5dc691007946e8eaab7bf46b0de9412f39213d8c06e48b53bf9a6c5 # renovate: datasource=docker depName=docker.io/adguard/adguardhome packageName=docker.io/adguard/adguardhome versioning=docker registryUrl=https://index.docker.io
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          # capabilities:
          #   drop: [ "ALL" ]
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dchp
              containerPort: 67
              protocol: UDP
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: config-folder
              mountPath: /opt/adguardhome/conf
            - name: work-folder
              mountPath: /opt/adguardhome/work
      volumes:
        - name: config
          configMap:
            name: adguard-config
        - name: users
          secret:
            secretName: adguard-users-secrets
        - name: config-folder
          emptyDir: {}
        - name: work-folder
          emptyDir: {}
